# FairOrder

./: .gitignore  CMakeLists.txt  EXAMPLE_SESSION.md  LICENSE  QUICKSTART.md  README.md  notes.txt
src/: main.cpp
src/batching/: MicroBatcher.cpp  MicroBatcher.h
src/book/: OrderBook.cpp  OrderBook.h
src/core/: MatchingMode.h  OrderEvent.h  Types.h
src/engine/: MatchingEngine.cpp  MatchingEngine.h
src/metrics/: FairnessMetrics.cpp  FairnessMetrics.h
src/simulation/: Trader.cpp  Trader.h
src/ui/: CLI.cpp  CLI.h
